--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -5,13 +5,12 @@
 body {
   position: relative;
   color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  min-height: 100vh;
+  overflow: auto;
+  background: linear-gradient(200.96deg,
+      #fedc2a -29.09%,
+      #dd5789 51.77%,
+      #7a2c9e 129.35%);
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
