--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -12,13 +12,80 @@ body {
       #dd5789 51.77%,
       #7a2c9e 129.35%);
   font-family: sans-serif;
-  overflow-y: hidden;
+  margin: 0;
+}
+
+.fakeFileInput {
+  min-width: 210px;
+  margin-right: 10px;
+}
+
+body .hidden {
+  display: none;
+}
+
+.chartSettings {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: space-evenly;
+}
+
+.vRoot {
+  width: 100%;
+  height: 100%;
+
+  min-height: 100vh;
+
+}
+
+.vMain {
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
-button {
+.vSettings {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 1600px;
+  margin: 20px auto;
+}
+
+.colorPicCont {
+  position: absolute;
+  z-index: 1;
+}
+
+.vMainCont {
+  width: 100%;
+  max-width: 1600px;
+}
+
+#root {
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+}
+
+.yAxis {
+  color: red;
+}
+
+.label {
+  padding: 0 10px;
+}
+
+button,
+.button {
+  color: black;
   background-color: white;
   padding: 10px 20px;
   border-radius: 10px;
@@ -32,9 +99,26 @@ button {
   opacity: 0.9;
 }
 
-button:hover {
+button:hover,
+.button:hover {
   transform: scale(1.05);
   opacity: 1;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 30px 0;
+}
+
+
+
+.logo {
+  display: block;
+  width: 300px;
+  height: auto;
+  margin: 30px auto;
 }
 
 li {
